feat: restructure mobile code; add mode selection

--- a/ragyo_cosplay/lib/secrets.dart.example
+++ b/ragyo_cosplay/lib/secrets.dart.example
@@ -1,8 +1,8 @@
 import 'package:flutter_reactive_ble/flutter_reactive_ble.dart';
 
 final serviceUUID = Uuid.parse("your-uuid-here");
-final hueCharacteristicUUID = Uuid.parse("your-uuid-here");
-final syncCharacteristicUUID = Uuid.parse("your-uuid-here");
 final disconnectCharacteristicUUID = Uuid.parse("your-uuid-here");
+final hueCharacteristicUUID = Uuid.parse("your-uuid-here");
+final modeCharacteristicUUID = Uuid.parse("your-uuid-here");
 
 const arduinoID = "your-mac-here";
